fix(nasha.accesses): datagrid options overflow
ref: MANAGER-9798

--- a/packages/manager/modules/nasha/src/dashboard/partition/accesses/accesses.styles.scss
+++ b/packages/manager/modules/nasha/src/dashboard/partition/accesses/accesses.styles.scss
@@ -1,15 +1,25 @@
+$ouiSelectWidth: 12em;
+
 .nasha-dashboard-partition-accesses {
   oui-datagrid-topbar > * {
     display: flex;
     align-items: center;
   }
 
-  oui-select {
-    width: 20em;
+  oui-datagrid-cell oui-select {
+    width: $ouiSelectWidth;
   }
 
   .oui-datagrid-responsive {
     overflow: inherit;
+  }
+
+  .oui-datagrid__cell:last-child {
+    width: 100%;
+  }
+
+  .oui-datagrid__cell:not(:last-child) {
+    min-width: $ouiSelectWidth;
   }
 
   oui-datagrid.hide-pagination oui-pagination {
